Simple html and css frontend for main task screen

--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="wrapper">
+
+        <div id="header">
+            <div class="motivation">Live what you do</div>
+        </div>
+        <div class="workspaces">
+            <div class="side-panel">
+                <div class="profile">
+
+                </div>
+                <div class="sidebar-content">
+
+                </div>
+            </div>
+            <div class="task-content">
+                <div class="task-head">
+                    🎯 Tasks
+                </div>
+                <div class="tasks">
+                </div>
+
+                <div class="add-task">
+                    <div class="get-task">
+                        <input type="addTask" placeholder="Add Task" class="add-task-field">
+                        <button type="button" class="add-task-button">Add</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
