--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
             <div class="motivation">Live what you do</div>
         </div>
         <div class="workspaces">
-            <div class="side-panel">
+            <div class="side-panel sidebar-open">
                 <div class="profile">
 
                 </div>
                 <div class="sidebar-content">
-
+                    <button type="button" class="side-toggle">|</button>
                 </div>
+                
             </div>
             <div class="task-content">
                 <div class="task-head">
@@ -41,6 +42,6 @@
             </div>
         </div>
     </div>
-
-</body>
+    <script src="script.js"></script>
+</body> 
 </html>
