--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
             <div class="motivation">Live what you do</div>
         </div>
         <div class="workspaces">
-            <div class="side-panel sidebar-open">
+            <div class="side-panel">
                 <div class="profile">
 
                 </div>
                 <div class="sidebar-content">
-                    <button type="button" class="side-toggle">|</button>
+
                 </div>
-                
             </div>
             <div class="task-content">
                 <div class="task-head">
@@ -42,6 +41,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
-</body> 
+
+</body>
 </html>
