--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="task-content">
                 <div class="task-head">
-                    🎯 Tasks
+                    🎯 Title
                 </div>
                 <div class="tasks">
                 </div>
