Solving mobile responsiveness issue

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
                 <div class="detailed-task-panel">
                     <button class="close-task-panel">></button>
-
+                    <input type="text" class="task-title">
+                    <textarea class="task-description" id="" cols="30" rows="5"></textarea>
+                    
                 </div>
 
                 <div class="task-content content-page fade-animation">
