solving mobile responsive issue again

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <div class="content-head">
                         🎯 Tasks
                     </div>
+                    <div class="task-container-show">
                     <div class="content-body task-body">
 
                         <div class="task-box">
@@ -104,6 +105,7 @@
                             <input type="addTask" placeholder="Add Task" class="add-task-field">
                             <button type="button" class="add-task-button">Add</button>
                         </div>
+                    </div>
                     </div>
                 </div>
 
